# prismath

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: constants.rs  functions.rs  lib.rs  quad.rs  traits.rs  transform.rs
src/matrix/: mat2.rs  mat3.rs  mat4.rs  mod.rs
src/vec/: mod.rs  vec2.rs  vec3.rs  vec4.rs
